# brainrotbot

./: .gitignore  Cargo.toml  Justfile  README.md  brainrotter
agent-communication-client/: brainrotter  ip_assets.json  test-client.html
agent-communication-client/src/controllers/: messageController.ts
agent-communication-client/src/routes/: messageRoutes.ts
agent-communication-client/src/storyProtocolScripts/: simpleMintAndRegister.ts
crates/brainrotter/: Cargo.toml  Justfile  ip_assets_2.json  rot
crates/brainrotter/asset_finder/: all_contracts_with_ipfs.json  get_all_story_assets.py  get_story_assets.py  main.py  message.txt  pyproject.toml  requirements.txt  story_assets_from_discovered.json  story_assets_from_discovered_2.json
crates/brainrotter/src/: main.rs
crates/elevenlabs_lab/: Cargo.toml
crates/elevenlabs_lab/src/: lib.rs
crates/fal_wrapper/: Cargo.toml
crates/fal_wrapper/src/: lib.rs
crates/ffmpeg_wrapper/: Cargo.toml
crates/ffmpeg_wrapper/src/: lib.rs
crates/openai_wrapper/: Cargo.toml
crates/openai_wrapper/src/: lib.rs
crates/subtitle_hub/: Cargo.toml
crates/subtitle_hub/src/: lib.rs
crates/twitter_scraper/: Cargo.toml
crates/twitter_scraper/src/: lib.rs
scripts/: brainrot.js  brainrotter
src/: consts.rs  logger.rs  main.rs  tweet_center.rs
src/cycles/: mod.rs
src/cycles/tweet_cycle/: audio.rs  image_action.rs  loops.rs  mod.rs  srt.rs  text_action.rs
